tests/security/taintedInputToParamAlternatePath/output.txt
ERROR: TaintedData - input.hack:22:26 - Detected tainted SQL in path $_GET --ExpressionFetch(ArrayValue, "user_id")--> $_GET['user_id'] (input.hack:6:47) --Default--> call to A::getAppendedUserId (input.hack:6:38) --Default--> A::getAppendedUserId#1 (input.hack:10:46) --Default--> $user_id (input.hack:10:46) --Default--> composition (input.hack:11:16) --Default--> A::getAppendedUserId() (input.hack:10:58) --Default--> call to A::deleteUser (input.hack:6:13) --Default--> A::deleteUser#3 (input.hack:18:83) --Default--> $userId2 (input.hack:18:83) --Default--> composition (input.hack:22:26) --Default--> call to AsyncMysqlConnection::query (input.hack:22:26) --Default--> AsyncMysqlConnection::query#1 (hi_embedded_stdlib/builtins_async_mysql.hhi:164:12)